// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts should generate token stream 1`] = `
Array [
  Token {
    "attrs": Array [
      Array [
        "class",
        "yfm-note yfm-accent-info",
      ],
      Array [
        "note-type",
        "info",
      ],
    ],
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      0,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "div",
    "type": "yfm_note_open",
  },
  Token {
    "attrs": Array [
      Array [
        "class",
        "yfm-note-title",
      ],
    ],
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "p",
    "type": "yfm_note_title_open",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": Array [
      Token {
        "attrs": null,
        "block": false,
        "children": null,
        "content": "\\\\",
        "hidden": false,
        "info": "",
        "level": 0,
        "map": null,
        "markup": "",
        "meta": null,
        "nesting": 0,
        "tag": "",
        "type": "text",
      },
    ],
    "content": "\\\\",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": 0,
    "tag": "",
    "type": "inline",
  },
  Token {
    "attrs": null,
    "block": true,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "p",
    "type": "yfm_note_title_close",
  },
  Token {
    "attrs": Array [
      Array [
        "class",
        "yfm-note-content",
      ],
    ],
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      2,
      1,
    ],
    "markup": "",
    "meta": null,
    "nesting": 1,
    "tag": "div",
    "type": "yfm_note_content_open",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": null,
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "div",
    "type": "yfm_note_content_close",
  },
  Token {
    "attrs": null,
    "block": false,
    "children": null,
    "content": "",
    "hidden": false,
    "info": "",
    "level": 0,
    "map": Array [
      2,
      3,
    ],
    "markup": "",
    "meta": null,
    "nesting": -1,
    "tag": "div",
    "type": "yfm_note_close",
  },
]
`;

exports[`Alerts should render empty note 1`] = `
<div class="yfm-note yfm-accent-info"
     note-type="info"
>
  <div class="yfm-note-content">
  </div>
</div>
`;

exports[`Alerts should render nested notes 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <p class="yfm-note-title">
      Outer title
    </p>
    <div class="yfm-note-content">
      <p>
        Outer content
      </p>
      <div class="yfm-note-container">
        <div class="yfm-note yfm-accent-info"
             note-type="info"
        >
          <p class="yfm-note-title">
            Inner title
          </p>
          <div class="yfm-note-content">
            <p>
              Inner content
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Alerts should render note with empty string title 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <div class="yfm-note-content">
      <p>
        Note content with empty string title
      </p>
    </div>
  </div>
</div>
`;

exports[`Alerts should render note without title (notesAutotitle: false) 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <div class="yfm-note-content">
      <p>
        Note content without title
      </p>
    </div>
  </div>
</div>
`;

exports[`Alerts should render note without title (notesAutotitle: true) 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <p class="yfm-note-title">
      Примечание
    </p>
    <div class="yfm-note-content">
      <p>
        Note content without title
      </p>
    </div>
  </div>
</div>
`;

exports[`Alerts should render siblings notes 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <p class="yfm-note-title">
      Note title 1
    </p>
    <div class="yfm-note-content">
      <p>
        Note content 1
      </p>
    </div>
  </div>
</div>
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <p class="yfm-note-title">
      Note title 2
    </p>
    <div class="yfm-note-content">
      <p>
        Note content 2
      </p>
    </div>
  </div>
</div>
`;

exports[`Alerts should render simple note 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <p class="yfm-note-title">
      Note title
    </p>
    <div class="yfm-note-content">
      <p>
        Note content
      </p>
    </div>
  </div>
</div>
`;

exports[`Alerts should render title with format 1`] = `
<div class="yfm-note-container">
  <div class="yfm-note yfm-accent-info"
       note-type="info"
  >
    <p class="yfm-note-title">
      <em>
        Italic note title
      </em>
    </p>
    <div class="yfm-note-content">
      <p>
        Content
      </p>
    </div>
  </div>
</div>
`;
